--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,10 @@ section{
   background-position: center;
   position: relative;
 }
+.hero-secondary{
+  background-color: black;
+  color: blue;
+}
 
 .hero-form{
   background-color: #fce138;
@@ -243,4 +247,23 @@ section{
   text-align: left;
   margin: 30px 0 0 60px;
   color: white;
+}
+.contact-info h3{
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address{
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a{
+  color: #fce138;
+}
+
+article .second-page{
+
 }
