--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul{
 }
 
 header nav ul li a{
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -83,6 +83,7 @@ section{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .hero-cta{
@@ -91,7 +92,7 @@ section{
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h2{
@@ -152,7 +153,7 @@ section{
 }
 
 .section-title{
-  font-size: 55px;
+  font-size: 48px;
   color: #024e76;
   border-bottom: 3px solid;
   padding-bottom: 20px;
@@ -221,7 +222,6 @@ display: flex;
   flex: 12;
 }
 
-
 .trainers{
     width: 100%;
     margin: 0 auto;
@@ -229,7 +229,6 @@ display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
 
 .trainer{
    flex: 1;
