--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ display: flex;
 
 .trainer{
    flex: 1;
-   margin: 0 auto 20px auto;
+   margin: 20px;
    background: #024e76;
    color: #fce138;
 }
@@ -334,4 +334,28 @@ display: flex;
 
 .flex-row{
   display: flex;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+  header h1 a {
+    /* this will be applied on any screen smaller than 980px */
+    color: tomato;
+  }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+  header h1 {
+    /* this will be applied on any screen between 768px and 575px */
+    font-size: 80px;
+  }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+  header h1 {
+    /* this will be applied on any screen smaller than 575px */
+    font-size: 100px;
+  }
 }
