--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ header{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 
 header h1{
@@ -22,7 +29,7 @@ header h1{
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a{
@@ -46,6 +53,14 @@ header nav ul li a{
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover{
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 footer{
@@ -79,11 +94,12 @@ section{
 .hero {
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: 80%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
 }
 
 .hero-cta{
@@ -99,20 +115,24 @@ section{
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
 .hero-secondary{
   background-color: black;
   color: blue;
 }
 
 .hero-form{
-  background-color: #fce138;
+  background-color: rgb(252, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   border: solid 3px #024e76;
   margin: 5px 0 15px 0;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
 .hero-form h3{
@@ -120,7 +140,7 @@ section{
   margin: 0px;
 
 }
-
+/* Form Input*/
 .zazz{
   border: 1px solid #024e76;
   display: block;
@@ -129,6 +149,13 @@ section{
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.zazz:focus{
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .hero-form label{
@@ -141,6 +168,11 @@ section{
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
+}
+
+.hero-form button:hover{
+  background-color: #39a6b2;
 }
 
 .intro p{
@@ -178,11 +210,15 @@ section{
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
+  /* border-bottom: 1px solid #39a6b2; */
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.step:not(:last-child){
+  border-bottom: 1px solid #39a6b2;
 }
 
 .step h3{
@@ -203,10 +239,10 @@ section{
 }
 
 .step-info{
-flex: 2 70%;
-align-items: center;
-flex-wrap: wrap;
-display: flex;
+  flex: 2 70%;
+  align-items: center;
+  flex-wrap: wrap;
+  display: flex;
 }
 
 .step-img{
@@ -223,27 +259,27 @@ display: flex;
 }
 
 .trainers{
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer{
-   flex: 1;
-   margin: 20px;
-   background: #024e76;
-   color: #fce138;
+  flex: 1;
+  margin: 20px;
+  background: #024e76;
+  color: #fce138;
 }
 
 .trainer img{
-   width: 100%;
+  width: 100%;
 }
 
 .trainer-bio{
-   padding: 25px;
-   line-height: 1.3;
+  padding: 25px;
+  line-height: 1.3;
 }
 
 .text-left{
@@ -316,6 +352,13 @@ display: flex;
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus{
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .contact-form button{
@@ -326,6 +369,12 @@ display: flex;
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
+}
+
+.contact-form button:hover{
+  color: #fce138;
+  background: #39a6b2;
 }
 
 .contact-info a{
@@ -341,6 +390,7 @@ display: flex;
   header{
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1{
@@ -440,6 +490,6 @@ display: flex;
   }
 
   .contact-form{
-    order: 3;
+   order: 3;
   }
 }
