--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -6,12 +12,12 @@
 
 body{
     font-family: Helvetica, Arial, sans-serif;
-    color: #39a6b2;
+    color: var(--tertiary-color);
 }
 
 header{
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -22,18 +28,19 @@ header{
     background-size: cover;
     background-position: 80%;
     background-attachment: fixed;
+    z-index: 9999;
 }
 
 header h1{
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color:var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a{
-    color: #fce138;
+    color:var(--primary-color);
     text-decoration: none;
 }
 
@@ -57,8 +64,8 @@ header nav ul li a{
 }
 
 header nav ul li a:hover{
-  background: #fce138;
-  color: #024e76;
+  background:var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 15px;
   text-shadow: none;
 }
@@ -67,13 +74,13 @@ footer{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: #fce138;
+    background:var(--primary-color);
     width: 100%;
     padding: 40px 35px;
 }
 
 footer h2{
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -84,7 +91,7 @@ footer div{
 }
 
 footer a{
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 section{
@@ -114,7 +121,7 @@ section{
 .hero-cta h2{
   font-style: italic;
   font-size: 55px;
-  color: #fce138;
+  color:var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -126,8 +133,8 @@ section{
 .hero-form{
   background-color: rgb(252, 225, 56, 0.8);
   padding: 20px;
-  color: #024e76;
-  border: solid 3px #024e76;
+  color: var(--secondary-color);
+  border: solid 3px var(--secondary-color);
   margin: 5px 0 15px 0;
   width: 40%;
   margin: 3.5%;
@@ -142,11 +149,11 @@ section{
 }
 /* Form Input*/
 .zazz{
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   border-radius: 10px;
@@ -158,13 +165,73 @@ section{
   outline: none;
 }
 
+.checkbox-wrapper input, .radio-wrapper input{
+  opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label{
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid var(--secondary-color);  
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+
+.checkbox-wrapper label::after{
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+
+.radio-wrapper label::before{
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--secondary-color);
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  border-radius: 50%;
+}
+
+.radio-wrapper label::after{
+  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+
 .hero-form label{
   margin: 0px 5px;
 }
 
 .hero-form button{
-  color: #fce138;
-  background-color: #024e76;
+  color:var(--primary-color);
+  background-color: var(--secondary-color);
   border: none;
   padding: 10px 20px;
   font-size: 16px;
@@ -172,12 +239,12 @@ section{
 }
 
 .hero-form button:hover{
-  background-color: #39a6b2;
+  background-color: var(--tertiary-color);
 }
 
 .intro p{
   line-height: 1.7;
-  color: #39a6b2;
+  color: var(--tertiary-color);
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
@@ -186,7 +253,7 @@ section{
 
 .section-title{
   font-size: 48px;
-  color: #024e76;
+  color: var(--secondary-color);
   border-bottom: 3px solid;
   padding-bottom: 20px;
   text-align: center;
@@ -195,22 +262,22 @@ section{
 }
 
 .primary-border{
-  border-color: #fce138;
+  border-color:var(--primary-color);
 }
 
 .secondary-border{
-  border-color: #39a6b2
+  border-color: var(--tertiary-color)
 }
 
 .steps{
-  background: #fce138;
+  background:var(--primary-color);
 }
 
 .step{
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  /* border-bottom: 1px solid #39a6b2; */
+  /* border-bottom: 1px solid var(--tertiary-color); */
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -218,24 +285,24 @@ section{
 }
 
 .step:not(:last-child){
-  border-bottom: 1px solid #39a6b2;
+  border-bottom: 1px solid var(--tertiary-color);
 }
 
 .step h3{
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 46px;
   flex: 1 30%;
 }
 
 .step-text p{
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-size: 18px;
 }
 
 .step-text h4{
   font-size: 26px;
   line-height: 1.5;
-  color: #024e76;
+  color: var(--secondary-color);
 }
 
 .step-info{
@@ -269,8 +336,8 @@ section{
 .trainer{
   flex: 1;
   margin: 20px;
-  background: #024e76;
-  color: #fce138;
+  background: var(--secondary-color);
+  color:var(--primary-color);
 }
 
 .trainer img{
@@ -305,11 +372,11 @@ section{
 }
 
 .contact{
-  background: #024e76;
+  background: var(--secondary-color);
 }
 
 .contact h2{
-  color: #fce138;
+  color:var(--primary-color);
 }
 
 .contact-info{
@@ -332,7 +399,7 @@ section{
 }
 
 .contact-info h3{
-  color: #fce138;
+  color:var(--primary-color);
   font-size: 32px;
 }
 
@@ -344,11 +411,11 @@ section{
 }
 
 .contact-form input, .contact-form textarea{
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -364,8 +431,8 @@ section{
 .contact-form button{
   width: 100%;
   border: none;
-  background: #fce138;
-  color: #024e76;
+  background:var(--primary-color);
+  color: var(--secondary-color);
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
@@ -373,12 +440,12 @@ section{
 }
 
 .contact-form button:hover{
-  color: #fce138;
-  background: #39a6b2;
+  color:var(--primary-color);
+  background: var(--tertiary-color);
 }
 
 .contact-info a{
-  color: #fce138;
+  color:var(--primary-color);
 }
 
 .flex-row{
